--- a/app/src/main/res/layout/activity_color_keyboard.xml
+++ b/app/src/main/res/layout/activity_color_keyboard.xml
@@ -26,6 +26,16 @@
         tools:ignore="ContentDescription" />
 
     <ImageView
+        android:id="@+id/decoyView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
         android:id="@+id/dotView"
         android:layout_width="100dp"
         android:layout_height="100dp"
