--- a/app/src/main/res/layout/activity_vatest.xml
+++ b/app/src/main/res/layout/activity_vatest.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="#FFFFFF"/>
     <ImageView
         android:id="@+id/ivSnellen"
         android:layout_width="wrap_content"
