--- a/app/src/main/res/layout/activity_color_keyboard.xml
+++ b/app/src/main/res/layout/activity_color_keyboard.xml
@@ -26,26 +26,50 @@
         tools:ignore="ContentDescription" />
 
     <ImageView
-        android:id="@+id/decoyView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:scaleType="centerCrop"
-        tools:ignore="ContentDescription" />
-
-    <ImageView
-        android:id="@+id/dotView"
+        android:id="@+id/dotViewLeft"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="40dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@id/noiseView"
-        app:layout_constraintEnd_toEndOf="@id/noiseView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/noiseView"
-        app:layout_constraintTop_toTopOf="@id/noiseView"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/noiseView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
+
+    <ImageView
+    android:id="@+id/dotViewRight"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_marginEnd="40dp"
+    android:visibility="visible"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:ignore="ContentDescription"
+    tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/dotViewUp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="40dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/dotViewDown"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="ContentDescription"
         tools:visibility="visible" />
 
