Color calibration implementation started

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,7 +9,7 @@
         android:visible="false"
         />
     <item
-        android:id="@+id/passButton"
+        android:id="@+id/more"
         android:title="@string/can_t_see_it"
         app:showAsAction="always"
         android:icon="@drawable/ic_baseline_visibility_off_24"
