--- a/app/src/main/res/layout/activity_color_keyboard.xml
+++ b/app/src/main/res/layout/activity_color_keyboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ColorActivity">
+    tools:context=".activities.ColorTestActivity">
 
     <ImageView
         android:id="@+id/noiseView"
@@ -38,16 +38,16 @@
         tools:visibility="visible" />
 
     <ImageView
-    android:id="@+id/dotViewRight"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_marginEnd="40dp"
-    android:visibility="visible"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:ignore="ContentDescription"
-    tools:visibility="visible" />
+        android:id="@+id/dotViewRight"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="40dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/dotViewUp"
