Starting implementation of resultsactivity

--- a/app/src/main/res/layout/activity_contrasttest_keyboard.xml
+++ b/app/src/main/res/layout/activity_contrasttest_keyboard.xml
@@ -100,14 +100,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21" />
+        app:layout_constraintGuide_percent="0.21203831" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/downguideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.79" />
+        app:layout_constraintGuide_percent="0.7920657" />
 
     <TextView
         android:id="@+id/textView"
