--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -14,7 +14,7 @@
         app:layout_constraintGuide_percent="0.15" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/topTV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimaryDark"
@@ -28,20 +28,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/startTextView"
+        android:id="@+id/bottomTV"
+        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
+        android:gravity="center"
         android:text="@string/press_space_to_contine"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/downguideline"
-        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
-        android:background="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:gravity="center"/>
+        app:layout_constraintTop_toTopOf="@+id/downguideline" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -52,14 +52,15 @@
         app:layout_constraintGuide_percent="0.79" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/middleTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next: "
-        app:layout_constraintBottom_toTopOf="@+id/startTextView"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:textSize="30sp"
-        android:textColor="#000000"/>
+        app:layout_constraintTop_toBottomOf="@+id/topTV" />
 </androidx.constraintlayout.widget.ConstraintLayout>
