--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -125,8 +125,8 @@
 
     <TextView
         android:id="@+id/chooseSpecificTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
         android:text="@string/choose_specific_test"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +134,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         app:layout_constraintVertical_bias="0.19"
         android:textSize="20sp"
+        android:gravity="center"
         android:textColor="@color/colorPrimary"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
