--- a/app/src/main/res/layout/activity_color_keyboard.xml
+++ b/app/src/main/res/layout/activity_color_keyboard.xml
@@ -127,4 +127,14 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/colordemo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
