--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -20,6 +20,7 @@
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
         android:text="Visual acuity: "
+        android:visibility="gone"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
@@ -57,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Next: "
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/downguideline"
         app:layout_constraintEnd_toEndOf="parent"
