--- a/app/src/main/res/menu/calibration_menu.xml
+++ b/app/src/main/res/menu/calibration_menu.xml
@@ -9,6 +9,8 @@
         <menu>
             <item android:id="@+id/color_calibration"
                 android:title="@string/refine_parameters" />
+            <item android:id="@+id/hungarian"
+                android:title="@string/refine_parameters" />
         </menu>
     </item>
 </menu>
