--- a/app/src/main/res/layout/activity_parameters.xml
+++ b/app/src/main/res/layout/activity_parameters.xml
@@ -149,6 +149,25 @@
             android:inputType="numberDecimal"
             android:id="@+id/maxContrastET"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Circle size in degrees"
+            android:textSize="16sp"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:layout_gravity="left"/>
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:inputType="numberDecimal"
+            android:id="@+id/contrastDegreesET"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -212,5 +231,24 @@
         android:inputType="numberDecimal"
         android:id="@+id/saturationET"/>
 </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Circles size in degrees"
+            android:textSize="16sp"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:layout_gravity="left"/>
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:inputType="numberDecimal"
+            android:id="@+id/colorDegreesET"/>
+    </LinearLayout>
 
 </LinearLayout>
